@@ -9,6 +9,7 @@ export(filedump)
 export(get_log)
 export(run_file)
 export(simple)
+export(source_file)
 export(start_log)
 export(stop_log)
 importFrom(R6,R6Class)
