@@ -1,6 +1,9 @@
 version 1.1.0
 - cellwise logger now warns when it encounters a duplicate key (this will corrupt
   logging info).
+- 'run_file' gains argument 'envir'.
+- new function 'source_file', with behaviour close to 'source'.
+
 
 version 1.0.3
 - fixed test that triggered a CRAN error because it wrote in the installed
